katalog/gatekeeper/rules/constraints/must_have_namespace_label_to_be_safely_deleted.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProtectedNamespace
metadata:
  name: namespace-protected
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
