katalog/gatekeeper/rules/constraints/must_have_unique_service_selector.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueServiceSelector
metadata:
  name: unique-service-selector
spec:
  enforcementaction: deny
