katalog/gatekeeper/rules/constraints/must_not_escalate.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: disallow-escalation
spec:
  enforcementAction: deny
