katalog/gatekeeper/rules/constraints/must_not_have_capabilities.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: disallow-capabilities
spec:
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities: ["ALL"]
