katalog/gatekeeper/rules/constraints/must_not_have_host_namespaces.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: disallow-host-namespace
spec:
  match:
    kinds:
      - apiGroups: []
        kinds: []
