katalog/gatekeeper/rules/constraints/must_not_have_host_network_ports.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: disallow-host-network-ports
spec:
  enforcementAction: deny
  parameters:
    hostNetwork: false
    min: 0
    max: 900000
