katalog/gatekeeper/rules/constraints/must_not_have_host_path.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: disallow-host-filesystem
spec:
  enforcementAction: deny
  parameters:
    allowedHostPaths: []
