katalog/gatekeeper/rules/constraints/must_not_have_root.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: disallow-root
spec:
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot # MustRunAsNonRoot # RunAsAny #MustRunAs
